--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.2",
     "chart.js": "^4.1.2",
+    "flowbite": "^1.6.5",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
