--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2"
   },
